# CHIP8-rs

./: .gitignore  .gitmodules  .vimspector.json  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.txt  README.md  index.html  netlify-build.sh  netlify.toml
.github/workflows/: docs.yml  rust.yml
docs/: CNAME  crates.js  fn.main.html  index.html  search-index.js  src-files.js
docs/ansi_term/: all.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  index.html  struct.Prefix.html
docs/atty/: enum.Stream.html  fn.is.html
docs/bitflags/: index.html  macro.bitflags.html
docs/cfg_if/: all.html  index.html
docs/chip8/: index.html  sidebar-items.js  struct.Chip8.html
docs/chip8_rs/: all.html  sidebar-items.js  struct.Opt.html
docs/clap/: macro.crate_authors.html  macro.crate_name.html  macro.value_t.html  macro.value_t_or_exit.html  struct.ArgMatches.html  struct.Error.html
docs/function_name/: all.html  attr.named.html  index.html
docs/function_name_proc_macro/: all.html  sidebar-items.js
docs/getrandom/: fn.getrandom.html  index.html
docs/heck/: index.html  trait.MixedCase.html
docs/lazy_static/: all.html  fn.initialize.html  index.html
docs/libc/: constant.ABDAY_4.html  constant.ABMON_11.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_6.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ADDR_LIMIT_3GB.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_IB.html  (+1969 more)
src/: chip8.rs  lib.rs  main.rs  platform.rs  platform_web.rs
(+399 files in other folders)
